# first-c-plus-plus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  configure  main.cpp  make
.github/workflows/: build.yml
